create header, humberger, hero, nav sass modules for style

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -3,12 +3,12 @@
 @import './settings/utils';
 @import './settings/resetFormStyles';
 @import './modules/header';
+@import './modules/humberger';
 @import './modules/hero';
 @import './modules/nav';
 // @import './modules/card';
 // @import './modules/search';
 // @import './modules/footer';
-// @import './modules/humberger';
 
 // .more-btn {
 //   text-align: right;
