add cocktail sass module for list rendering of drink items

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -6,7 +6,7 @@
 @import './modules/humberger';
 @import './modules/hero';
 @import './modules/nav';
-// @import './modules/card';
+@import './modules/cocktail';
 // @import './modules/search';
 // @import './modules/footer';
 
