--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -4,7 +4,7 @@ $mainColor: #0F1422;
 $baseColor: #EAEAEA;
 $subColor: #5A5A5A;
 
-$cardTextColor: #ccc;
+$cocktailTextColor: #ccc;
 
 $searchBgColor: hsla(222, 25%, 18%, 0.8);
 
