--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10417,4 +10417,62 @@ input[type='password']:focus {
   font-size: 1.4em;
   color: white;
 }
+
+.cocktail__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0;
+  list-style: none;
+  margin: 0 0 12px 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cocktail__list::after {
+  content: '';
+  display: block;
+  width: 30%;
+}
+
+.cocktail__item {
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+  background-color: white;
+  width: 30%;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.cocktail__link {
+  width: 30%;
+}
+
+.cocktail__img {
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.cocktail__description {
+  padding: 0.5em 0.2em;
+}
+
+.cocktail__title {
+  font-size: 12px;
+  color: #5A5A5A;
+  margin-bottom: 1px;
+}
+
+.cocktail__text {
+  font-size: 10px;
+  color: #ccc;
+  margin: 0;
+}
 /*# sourceMappingURL=home.css.map */
