--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10427,7 +10427,7 @@ input[type='password']:focus {
           justify-content: space-between;
   padding: 0;
   list-style: none;
-  margin: 0 0 12px 0;
+  margin-bottom: 0;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -10474,5 +10474,39 @@ input[type='password']:focus {
   font-size: 10px;
   color: #ccc;
   margin: 0;
+}
+
+.recommend {
+  padding: 30px 0px 20px 0;
+  background-color: #EAEAEA;
+}
+
+.recommend__title::after {
+  background-color: #5A5A5A;
+}
+
+.classic {
+  padding: 30px 0px;
+  background-color: white;
+}
+
+.classic__title::after {
+  background-color: #5A5A5A;
+}
+
+.more-btn {
+  text-align: right;
+  font-size: 14px;
+}
+
+.more-btn > a {
+  color: #5A5A5A;
+  text-decoration: none !important;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+
+.more-btn > a:hover {
+  color: #0F1422;
 }
 /*# sourceMappingURL=home.css.map */
