--- a/src/scss/modules/_cocktail.scss
+++ b/src/scss/modules/_cocktail.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     padding: 0;
     list-style: none;
-    margin: 0 0 12px 0;
+    margin-bottom: 0;
     flex-wrap: wrap;
 
     &::after {
