--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -7,7 +7,7 @@
 @import './modules/hero';
 @import './modules/nav';
 @import './modules/cocktail';
-// @import './modules/search';
+@import './modules/search';
 // @import './modules/footer';
 
 .recommend {
