--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -8,7 +8,7 @@
 @import './modules/nav';
 @import './modules/cocktail';
 @import './modules/search';
-// @import './modules/footer';
+@import './modules/footer';
 
 .recommend {
   padding: 30px 0px 20px 0;
