--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10294,6 +10294,28 @@ input[type='password']:focus {
   z-index: 1000;
 }
 
+#contents-container {
+  position: relative;
+  -webkit-transition: -webkit-transform 0.3s, -webkit-box-shadow 0.1s;
+  transition: -webkit-transform 0.3s, -webkit-box-shadow 0.1s;
+  transition: transform 0.3s, box-shadow 0.1s;
+  transition: transform 0.3s, box-shadow 0.1s, -webkit-transform 0.3s, -webkit-box-shadow 0.1s;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  width: 260px;
+  height: 100%;
+  background-color: #5A5A5A;
+  -webkit-transform: translateX(-260px);
+          transform: translateX(-260px);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
 .mobile-menu__btn {
   background-color: unset;
   border: none;
@@ -10302,11 +10324,11 @@ input[type='password']:focus {
 }
 
 .mobile-menu__btn > span {
-  background-color: #000;
+  background-color: #0F1422;
   width: 35px;
   height: 1px;
   display: block;
-  margin-bottom: 9px;
+  margin-bottom: 10px;
   -webkit-transition: -webkit-transform 0.7s;
   transition: -webkit-transform 0.7s;
   transition: transform 0.7s;
@@ -10319,6 +10341,182 @@ input[type='password']:focus {
 
 .mobile-menu__btn > span:last-child {
   margin-bottom: 0;
+}
+
+.mobile-menu__cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+  cursor: pointer;
+  z-index: 200;
+}
+
+.mobile-menu__profile {
+  width: 100%;
+  height: 120px;
+  background-color: #0F1422;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mobile-menu__icon {
+  margin: 0 22px;
+}
+
+.mobile-menu__icon img {
+  max-width: 100%;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.mobile-menu__username {
+  color: white;
+  font-size: 1.2em;
+  letter-spacing: 1px;
+}
+
+.mobile-menu__main {
+  padding: 40px;
+  margin: 0;
+  list-style: none;
+  -webkit-perspective: 2000px;
+          perspective: 2000px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+.mobile-menu__item {
+  margin-bottom: 15px;
+  -webkit-transform: translate3d(0, 0, -1000px);
+          transform: translate3d(0, 0, -1000px);
+  opacity: 0;
+  -webkit-transition: opacity 0.1s 0.4s, -webkit-transform 0.2s 0.4s;
+  transition: opacity 0.1s 0.4s, -webkit-transform 0.2s 0.4s;
+  transition: opacity 0.1s 0.4s, transform 0.2s 0.4s;
+  transition: opacity 0.1s 0.4s, transform 0.2s 0.4s, -webkit-transform 0.2s 0.4s;
+}
+
+.mobile-menu__link {
+  display: inline-block;
+  padding: 10px;
+  color: white;
+  text-decoration: none !important;
+}
+
+.mobile-menu__link:hover {
+  color: #EAEAEA;
+}
+
+.mobile-menu__logo {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.mobile-menu__logo img {
+  max-width: 100%;
+}
+
+.menu-open #contents-container {
+  -webkit-transform: translate(260px, 0);
+          transform: translate(260px, 0);
+  -webkit-box-shadow: 0 8px 40px -10px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 8px 40px -10px rgba(0, 0, 0, 0.8);
+}
+
+.menu-open .mobile-menu {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-open .mobile-menu__cover {
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu-open .mobile-menu__item {
+  -webkit-transform: none;
+          transform: none;
+  opacity: 1;
+}
+
+.menu-open .mobile-menu__item:nth-child(1) {
+  -webkit-transition-delay: 0.07s;
+          transition-delay: 0.07s;
+}
+
+.menu-open .mobile-menu__item:nth-child(2) {
+  -webkit-transition-delay: 0.14s;
+          transition-delay: 0.14s;
+}
+
+.menu-open .mobile-menu__item:nth-child(3) {
+  -webkit-transition-delay: 0.21s;
+          transition-delay: 0.21s;
+}
+
+.menu-open .mobile-menu__item:nth-child(4) {
+  -webkit-transition-delay: 0.28s;
+          transition-delay: 0.28s;
+}
+
+.menu-open .mobile-menu__item:nth-child(5) {
+  -webkit-transition-delay: 0.35s;
+          transition-delay: 0.35s;
+}
+
+.menu-open .mobile-menu__btn > span {
+  background-color: #EAEAEA;
+}
+
+.menu-open .mobile-menu__btn > span:nth-child(1) {
+  -webkit-transition-delay: 600ms;
+          transition-delay: 600ms;
+  -webkit-transform: translateY(11px) rotate(135deg);
+          transform: translateY(11px) rotate(135deg);
+}
+
+.menu-open .mobile-menu__btn > span:nth-child(2) {
+  -webkit-transition-delay: 900ms;
+          transition-delay: 900ms;
+  -webkit-transform: translateX(-18px) scaleX(0);
+          transform: translateX(-18px) scaleX(0);
+}
+
+.menu-open .mobile-menu__btn > span:nth-child(3) {
+  -webkit-transition-delay: 1.6s;
+          transition-delay: 1.6s;
+  -webkit-transform: translateY(-11px) rotate(405deg);
+          transform: translateY(-11px) rotate(405deg);
+}
+
+.nav-main-title {
+  display: block;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.nav-sub-title {
+  display: block;
+  font-size: 0.8em;
 }
 
 .hero {
