--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -3,12 +3,13 @@
 @import './settings/utils';
 @import './settings/resetFormStyles';
 @import './modules/header';
-@import './modules/humberger';
+@import './modules/mobile-menu';
 @import './modules/hero';
 @import './modules/nav';
 @import './modules/cocktail';
 @import './modules/search';
 @import './modules/footer';
+
 
 .recommend {
   padding: 30px 0px 20px 0;
