modify search style and add hover style

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10677,6 +10677,7 @@ input[type='password']:focus {
 input[type='text'] {
   background-color: white !important;
   border: none !important;
+  outline: none !important;
   padding: 4px 8px;
   letter-spacing: 2px;
 }
@@ -10729,6 +10730,7 @@ input[type='text']:focus {
 }
 
 .search__btn {
+  outline: none !important;
   position: absolute;
   right: 5px;
   top: 50%;
@@ -10748,6 +10750,14 @@ input[type='text']:focus {
   padding: 8px 12px;
   border: 1px solid white;
   color: white;
+  cursor: pointer;
+  -webkit-transition: background-color .1s, color .3s;
+  transition: background-color .1s, color .3s;
+}
+
+.search__categories:hover {
+  background-color: white;
+  color: #0F1422;
 }
 
 .search__img img {
