--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10616,6 +10616,10 @@ input[type='password']:focus {
   color: white;
 }
 
+a[href] {
+  text-decoration: none !important;
+}
+
 .cocktail__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10644,10 +10648,24 @@ input[type='password']:focus {
   -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  border-radius: 2px;
+}
+
+.cocktail__item:hover {
+  -webkit-box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1);
+  -webkit-transform: translateY(-1px);
+          transform: translateY(-1px);
 }
 
 .cocktail__link {
   width: 30%;
+}
+
+.cocktail__link:hover {
+  text-decoration: none !important;
 }
 
 .cocktail__img {
