--- a/src/scss/modules/_cocktail.scss
+++ b/src/scss/modules/_cocktail.scss
@@ -1,5 +1,8 @@
-.cocktail {
+a[href] {
+  text-decoration: none !important;
+}
 
+.cocktail {
   &__list {
     display: flex;
     justify-content: space-between;
@@ -20,9 +23,20 @@
     width: 30%;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    transition: all .3s;
+    border-radius: 2px;
+
+    &:hover {
+      box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1);
+      transform: translateY(-1px);
+    }
   }
   &__link {
     width: 30%;
+
+    &:hover {
+      text-decoration: none !important;
+    }
   }
   &__img {
     max-width: 100%;
