create register page with markup and styleup

--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -13,3 +13,6 @@ $footerColor: hsla(224, 37%, 10%, 0.6);
 $subTitleColor: #A2A2A2;
 
 $submitColor: #C0C0C0;
+
+$formBorderColor: #707070;
+$formBtnColor: rgba(16, 21, 35, 0.6);
