--- a/src/css/register.css
+++ b/src/css/register.css
@@ -10616,191 +10616,19 @@ input[type='password']:focus {
   color: white;
 }
 
-a[href] {
-  text-decoration: none !important;
-}
-
-.cocktail__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0;
-  list-style: none;
-  margin-bottom: 0;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.cocktail__list::after {
-  content: '';
-  display: block;
-  width: 30%;
-}
-
-.cocktail__item {
-  -ms-flex-preferred-size: auto;
-      flex-basis: auto;
-  background-color: white;
-  width: 30%;
-  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-  border-radius: 2px;
-}
-
-.cocktail__item:hover {
-  -webkit-box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.1);
-  -webkit-transform: translateY(-1px);
-          transform: translateY(-1px);
-}
-
-.cocktail__link {
-  width: 30%;
-}
-
-.cocktail__link:hover {
-  text-decoration: none !important;
-}
-
-.cocktail__img {
-  max-width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-}
-
-.cocktail__description {
-  padding: 0.5em 0.2em;
-}
-
-.cocktail__title {
-  font-size: 12px;
+.form__title {
+  text-align: center;
+  font-size: 22px;
   color: #5A5A5A;
-  margin-bottom: 1px;
 }
 
-.cocktail__text {
-  font-size: 10px;
-  color: #ccc;
-  margin: 0;
+.form__label {
+  color: #A2A2A2;
 }
 
-input[type='text'] {
-  background-color: white !important;
-  border: none !important;
-  outline: none !important;
-  padding: 4px 8px;
-  letter-spacing: 2px;
-}
-
-input[type='text']:focus {
-  border: none !important;
-}
-
-.search {
-  position: relative;
-  height: 270px;
-  margin-bottom: 80px;
-}
-
-.search-inner {
-  padding: 40px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100%;
-  z-index: 100;
-}
-
-.search__title {
+.form__btn {
+  background-color: rgba(16, 21, 35, 0.6) !important;
   color: white !important;
-}
-
-.search__title::after {
-  background-color: white;
-}
-
-.search__form {
-  margin-bottom: 45px;
-  width: 240px;
-}
-
-.search__bar {
-  position: relative;
-}
-
-.search__input {
-  letter-spacing: 2px;
-}
-
-.search__btn {
-  outline: none !important;
-  position: absolute;
-  right: 5px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  cursor: pointer;
-}
-
-.search__info {
-  color: #EAEAEA;
-  font-size: 10px;
-  margin-bottom: 10px;
-}
-
-.search__categories {
-  display: inline-block;
-  padding: 8px 12px;
-  border: 1px solid white;
-  color: white;
-  cursor: pointer;
-  -webkit-transition: background-color .1s, color .3s;
-  transition: background-color .1s, color .3s;
-}
-
-.search__categories:hover {
-  background-color: white;
-  color: #0F1422;
-}
-
-.search__img img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  -o-object-position: center;
-     object-position: center;
-  -o-object-fit: cover;
-     object-fit: cover;
-  z-index: -200;
-}
-
-.search__img::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(34, 41, 57, 0.8);
-  z-index: -100;
 }
 
 .footer__copyright {
@@ -10811,37 +10639,11 @@ input[type='text']:focus {
   padding: 15px 0;
 }
 
-.recommend {
-  padding: 30px 0px 20px 0;
-  background-color: #EAEAEA;
+.nav {
+  margin-bottom: 40px;
 }
 
-.recommend__title::after {
-  background-color: #5A5A5A;
+.register {
+  margin-bottom: 40px;
 }
-
-.classic {
-  padding: 30px 0px;
-  background-color: white;
-}
-
-.classic__title::after {
-  background-color: #5A5A5A;
-}
-
-.more-btn {
-  text-align: right;
-  font-size: 14px;
-}
-
-.more-btn > a {
-  color: #5A5A5A;
-  text-decoration: none !important;
-  -webkit-transition: 0.2s ease-out;
-  transition: 0.2s ease-out;
-}
-
-.more-btn > a:hover {
-  color: #0F1422;
-}
-/*# sourceMappingURL=home.css.map */
+/*# sourceMappingURL=register.css.map */
