--- a/src/scss/settings/_resetFormStyles.scss
+++ b/src/scss/settings/_resetFormStyles.scss
@@ -17,7 +17,7 @@ input[type='submit'] {
   appearance: none;
   background-color: transparent;
   background-image: none;
-  border: 1px solid rgba(0, 0, 0, 0.16);
+  border: 1px solid $formBorderColor;
   border-radius: 0;
   color: inherit;
   font-family: inherit;
