--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -16,3 +16,8 @@ $submitColor: #C0C0C0;
 
 $formBorderColor: #707070;
 $formBtnColor: rgba(16, 21, 35, 0.6);
+
+
+$loginUnvalidTextColor: #64A7CB;
+$loginOrRegisterTextColor: #707070;
+$loginOrRegisterLineColor: #A2A2A2;
