--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -1,23 +1,37 @@
-$cBlack: #000;
-
 $mainColor: #0F1422;
 $baseColor: #EAEAEA;
 $subColor: #5A5A5A;
+$subColor2: #A2A2A2;
+$subColor3: #707070;
+$bgMaskColor: hsla(222, 25%, 18%, 0.8);
+$footerColor: hsla(224, 37%, 10%, 0.6);
+
 
 $cocktailTextColor: #ccc;
 
-$searchBgColor: hsla(222, 25%, 18%, 0.8);
+$searchBgColor: $bgMaskColor;
 
-$footerColor: hsla(224, 37%, 10%, 0.6);
 
-$subTitleColor: #A2A2A2;
+$subTitleColor: $subColor2;
 
 $submitColor: #C0C0C0;
 
-$formBorderColor: #707070;
+$formBorderColor: $subColor3;
 $formBtnColor: rgba(16, 21, 35, 0.6);
 
 
 $loginUnvalidTextColor: #64A7CB;
-$loginOrRegisterTextColor: #707070;
-$loginOrRegisterLineColor: #A2A2A2;
+$loginOrRegisterTextColor: $subColor3;
+$loginOrRegisterLineColor: $subColor2;
+
+
+$servicesTitleColor: $subColor;
+$servicesBorderColor: $subColor;
+
+
+$creatorBgColor: $bgMaskColor;
+
+$contactTitleColor: $subColor;
+$contactBorderColor: $subColor;
+$contactEmailColor: $subColor;
+$contactIconColor: $subColor;
