--- a/src/css/search.css
+++ b/src/css/search.css
@@ -10573,49 +10573,6 @@ input[type='password']:focus {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
-.nav {
-  background-color: #5A5A5A;
-}
-
-.nav__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 60px;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.nav__item {
-  font-size: 13px;
-  padding: 0px 10px;
-  border-right: 1px solid #EAEAEA;
-}
-
-.nav__item:last-child {
-  border-right: none;
-}
-
-.nav__link {
-  color: #EAEAEA;
-  text-decoration: none !important;
-  -webkit-transition: .2s ease-out;
-  transition: .2s ease-out;
-}
-
-.nav__link:hover {
-  font-size: 1.4em;
-  color: white;
-}
-
 a[href] {
   text-decoration: none !important;
 }
@@ -10809,37 +10766,8 @@ input[type='text']:focus {
   padding: 15px 0;
 }
 
-.recommend {
+.drinks {
   padding: 30px 0px 20px 0;
-  background-color: #EAEAEA;
-}
-
-.recommend__title::after {
-  background-color: #5A5A5A;
-}
-
-.classic {
-  padding: 30px 0px;
   background-color: white;
 }
-
-.classic__title::after {
-  background-color: #5A5A5A;
-}
-
-.more-btn {
-  text-align: right;
-  font-size: 14px;
-}
-
-.more-btn > a {
-  color: #5A5A5A;
-  text-decoration: none !important;
-  -webkit-transition: 0.2s ease-out;
-  transition: 0.2s ease-out;
-}
-
-.more-btn > a:hover {
-  color: #0F1422;
-}
-/*# sourceMappingURL=home.css.map */
+/*# sourceMappingURL=search.css.map */
