--- a/src/scss/modules/_search.scss
+++ b/src/scss/modules/_search.scss
@@ -12,7 +12,7 @@ input[type='text']:focus {
 
 .search {
   position: relative;
-  margin-bottom: 80px;
+  // margin-bottom: 80px;
 
   &-inner {
     padding: 40px 0;
