--- a/src/css/search.css
+++ b/src/css/search.css
@@ -10766,6 +10766,45 @@ input[type='text']:focus {
   padding: 15px 0;
 }
 
+.hero__logo {
+  position: absolute;
+  z-index: 300;
+  top: 10px;
+  right: 30px;
+}
+
+.hero__logo img {
+  max-width: 100%;
+  width: 70px;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.hero__search-word {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: 100;
+}
+
+.hero__search-word__string {
+  font-size: 20px;
+  margin: 0;
+}
+
+.hero__search-word__underbar img {
+  max-width: 100%;
+  width: 160px;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .drinks {
   padding: 30px 0px 20px 0;
   background-color: white;
