--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,9 +1,18 @@
 @import '../settings/variables';
 
+#contents-container {
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 60px;
+}
 .footer {
+  position: absolute;
+  width: 100%;
+  background-color: $footerColor;
+  bottom: 0;
+
   &__copyright {
     text-align: center;
-    background-color: $footerColor;
     color: white;
     margin: 0;
     padding: 15px 0;
