--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -37,6 +37,8 @@
       text-align: center;
     }
     &__underbar {
+      text-align: center;
+
       & img {
         max-width: 100%;
         width: 160px;
