fix search page footer to stay on the bottom correctly

--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -49,3 +49,10 @@
   padding: 30px 0px 20px 0;
   background-color: white;
 }
+
+#contents-container {
+  padding-bottom: 0;
+}
+.footer {
+  position: static;
+}
