--- a/src/scss/category.scss
+++ b/src/scss/category.scss
@@ -5,9 +5,6 @@
 @import './modules/header';
 @import './modules/mobile-menu';
 @import './modules/hero';
-@import './modules/select-base';
-@import './modules/pulldown';
-@import './modules/cocktail';
 @import './modules/footer';
 
 .hero {
@@ -50,7 +47,18 @@
   }
 }
 
-.drinks {
+.category {
   padding: 30px 0px 20px 0;
   background-color: white;
+
+  &__description {
+    position: absolute;
+    margin: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    color: $categoryDescriptionColor;
+    z-index: 200;
+    font-size: 13px;
+  }
 }
