--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -24,6 +24,7 @@
     }
   }
   &__search-word {
+    width: 100%;
     position: absolute;
     top: 45%;
     left: 50%;
@@ -31,7 +32,7 @@
     z-index: 100;
 
     &__string {
-      font-size: 20px;
+      font-size: 30px;
       margin: 0;
     }
     &__underbar {
