adjust category hero

--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -1,4 +1,5 @@
 $mainColor: #0F1422;
+$mainColor2: #030303;
 $baseColor: #EAEAEA;
 $subColor: #5A5A5A;
 $subColor2: #A2A2A2;
@@ -41,3 +42,5 @@ $contactIconColor: $subColor;
 
 
 $selectBaseColor: $subColor4;
+
+$categoryDescriptionColor: $mainColor2;
