--- a/src/scss/category.scss
+++ b/src/scss/category.scss
@@ -54,7 +54,7 @@
   &__description {
     position: absolute;
     margin: 0;
-    bottom: 0;
+    bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
     color: $categoryDescriptionColor;
