create category page

--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -44,3 +44,6 @@ $contactIconColor: $subColor;
 $selectBaseColor: $subColor4;
 
 $categoryDescriptionColor: $mainColor2;
+
+$categoryLinkTextColor: $subColor3;
+$categoryLinkBorderColor: $subColor3;
