--- a/src/scss/category.scss
+++ b/src/scss/category.scss
@@ -61,4 +61,31 @@
     z-index: 200;
     font-size: 13px;
   }
+
+  &__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__base {
+    margin-bottom: 40px;
+  }
+  &__link {
+    border-bottom: 1px solid $categoryLinkBorderColor;
+    color: $categoryLinkTextColor;
+    width: 140px;
+    display: inline-block;
+    padding: 10px 0;
+    text-align: center;
+    transition: transform .5s, color .3s;
+
+    &:hover {
+      text-decoration: none;
+      color: $mainColor;
+      transform: scale(1.5);
+    }
+  }
 }
