--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -49,5 +49,8 @@ $categoryDescriptionColor: $mainColor2;
 $categoryLinkTextColor: $subColor3;
 $categoryLinkBorderColor: $subColor3;
 
-$heroPostBgImgBorderColor: $subColor3;
-$heroPostCircleColor: $subColor4;
+$recipeImgBgImgBorderColor: $subColor3;
+$recipeImgCircleColor: $subColor4;
+$recipeNameBgColor: $subColor4;
+$recipeNameInputPlaceholderColor: rgba(255, 255, 255, 0.302);
+$recipeNameInputBorderColor: rgba(255, 255, 255, 0.302);
