--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -54,3 +54,7 @@ $recipeImgCircleColor: $subColor4;
 $recipeNameBgColor: $subColor4;
 $recipeNameInputPlaceholderColor: rgba(255, 255, 255, 0.302);
 $recipeNameInputBorderColor: rgba(255, 255, 255, 0.302);
+$recipeInfoBgColor: $baseColor;
+$recipeInfoSelectColor: $subColor3;
+$recipeInfoPulldownColor: $subColor3;
+$recipeInfoPulldownTriggerBorderColor: $subColor3;
