modify one selector

--- a/src/scss/settings/_resetFormStyles.scss
+++ b/src/scss/settings/_resetFormStyles.scss
@@ -24,7 +24,8 @@ input[type='submit'] {
   width: 100%;
 }
 
-input[type='submit']:focus input[type='text']:focus,
+input[type='submit']:focus,
+input[type='text']:focus,
 input[type='email']:focus,
 input[type='password']:focus {
   border: 1px solid rgba(0, 0, 0, 0.32);
