--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -1,14 +1,14 @@
-@import './vendors/bootstrap.min';
-@import './settings/variables';
-@import './settings/utils';
-@import './settings/resetFormStyles';
-@import './modules/header';
-@import './modules/mobile-menu';
-@import './modules/hero';
-@import './modules/nav';
-@import './modules/cocktail';
-@import './modules/search';
-@import './modules/footer';
+@import '../vendors/bootstrap.min';
+@import '../settings/variables';
+@import '../settings/utils';
+@import '../settings/resetFormStyles';
+@import '../modules/header';
+@import '../modules/mobile-menu';
+@import '../modules/hero';
+@import '../modules/nav';
+@import '../modules/cocktail';
+@import '../modules/search';
+@import '../modules/footer';
 
 
 .recommend {
