--- a/src/scss/pages/category.scss
+++ b/src/scss/pages/category.scss
@@ -1,11 +1,11 @@
-@import './vendors/bootstrap.min';
-@import './settings/variables';
-@import './settings/utils';
-@import './settings/resetFormStyles';
-@import './modules/header';
-@import './modules/mobile-menu';
-@import './modules/hero';
-@import './modules/footer';
+@import '../vendors/bootstrap.min';
+@import '../settings/variables';
+@import '../settings/utils';
+@import '../settings/resetFormStyles';
+@import '../modules/header';
+@import '../modules/mobile-menu';
+@import '../modules/hero';
+@import '../modules/footer';
 
 .hero {
   &__logo {
@@ -80,7 +80,7 @@
     display: inline-block;
     padding: 10px 0;
     text-align: center;
-    transition: transform .5s, color .3s;
+    transition: transform 0.5s, color 0.3s;
 
     &:hover {
       text-decoration: none;
