--- a/src/scss/pages/detail.scss
+++ b/src/scss/pages/detail.scss
@@ -1,12 +1,12 @@
-@import './vendors/bootstrap.min';
-@import './settings/variables';
-@import './settings/utils';
-@import './settings/resetFormStyles';
-@import './modules/header';
-@import './modules/mobile-menu';
-@import './modules/cocktail';
-@import './modules/search';
-@import './modules/footer';
+@import '../vendors/bootstrap.min';
+@import '../settings/variables';
+@import '../settings/utils';
+@import '../settings/resetFormStyles';
+@import '../modules/header';
+@import '../modules/mobile-menu';
+@import '../modules/cocktail';
+@import '../modules/search';
+@import '../modules/footer';
 
 .detail {
   &__logo {
