--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -1,13 +1,13 @@
-@import './vendors/bootstrap.min';
-@import './settings/variables';
-@import './settings/utils';
-@import './settings/resetFormStyles';
-@import './modules/header';
-@import './modules/mobile-menu';
-@import './modules/hero';
-@import './modules/nav';
-@import './modules/form';
-@import './modules/footer';
+@import '../vendors/bootstrap.min';
+@import '../settings/variables';
+@import '../settings/utils';
+@import '../settings/resetFormStyles';
+@import '../modules/header';
+@import '../modules/mobile-menu';
+@import '../modules/hero';
+@import '../modules/nav';
+@import '../modules/form';
+@import '../modules/footer';
 
 #global-container {
   background-color: $baseColor;
