--- a/src/scss/pages/search.scss
+++ b/src/scss/pages/search.scss
@@ -1,14 +1,13 @@
-@import './vendors/bootstrap.min';
-@import './settings/variables';
-@import './settings/utils';
-@import './settings/resetFormStyles';
-@import './modules/header';
-@import './modules/mobile-menu';
-@import './modules/hero';
-@import './modules/select-base';
-@import './modules/pulldown';
-@import './modules/cocktail';
-@import './modules/footer';
+@import '../vendors/bootstrap.min';
+@import '../settings/variables';
+@import '../settings/utils';
+@import '../settings/resetFormStyles';
+@import '../modules/header';
+@import '../modules/mobile-menu';
+@import '../modules/hero';
+@import '../modules/cocktail';
+@import '../modules/search';
+@import '../modules/footer';
 
 .hero {
   &__logo {
@@ -53,4 +52,11 @@
 .drinks {
   padding: 30px 0px 20px 0;
   background-color: white;
+}
+
+#contents-container {
+  padding-bottom: 0;
+}
+.footer {
+  position: static;
 }
