--- a/src/scss/pages/post.scss
+++ b/src/scss/pages/post.scss
@@ -36,6 +36,27 @@
     height: 50%;
     cursor: pointer;
 
+    & .preview {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      border: 1px solid $recipeImgBgImgBorderColor;
+      border-radius: 10px;
+      z-index: 400;
+
+      & img {
+        max-width: 100%;
+        width: 100%;
+        object-fit: cover;
+        position: absolute;
+        bottom: 50%;
+        transform: translateY(50%);
+      }
+    }
+
     &__bg-img {
       position: absolute;
       top: 0;
@@ -70,7 +91,7 @@
 
     &__circle {
       position: absolute;
-      z-index: 100;
+      z-index: 500;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
