implement controlling appearance of select menu and separate as ES module

--- a/src/scss/pages/post.scss
+++ b/src/scss/pages/post.scss
@@ -146,9 +146,6 @@
     & .row:last-child .form-group {
       margin-bottom: 0;
     }
-    &__display-toggle {
-      display: none;
-    }
 
     & select {
       background-color: white;
@@ -301,4 +298,11 @@
 }
 .footer {
   position: static;
+}
+
+.inactive {
+  display: none;
+}
+.active {
+  display: block;
 }
