create home.php and install default-icon image and modify mobile-menu icon background for design

--- a/src/scss/modules/_mobile-menu.scss
+++ b/src/scss/modules/_mobile-menu.scss
@@ -67,6 +67,7 @@ $cMenuOpen: $baseColor;
       border-radius: 50%;
       object-position: center;
       object-fit: cover;
+      background-color: white;
     }
   }
   &__username {
