link mobile-menu__icon to about page and add cursor pointer

--- a/src/scss/modules/_mobile-menu.scss
+++ b/src/scss/modules/_mobile-menu.scss
@@ -101,6 +101,7 @@ $cMenuOpen: $baseColor;
   &__logo {
     width: 50%;
     margin: 0 auto;
+    cursor: pointer;
     & img {
       max-width: 100%;
     }
