--- a/src/scss/modules/_mobile-menu.scss
+++ b/src/scss/modules/_mobile-menu.scss
@@ -100,10 +100,30 @@ $cMenuOpen: $baseColor;
   }
   &__logo {
     width: 50%;
-    margin: 0 auto;
+    margin: 0 auto 24px;
     cursor: pointer;
     & img {
       max-width: 100%;
+    }
+  }
+  &__sns {
+    display: flex;
+    justify-content: center;
+
+    & .icon {
+      margin: 0 2px;
+      padding: 16px;
+      border-radius: 50%;
+      transition: background-color .3s;
+
+      &:hover {
+        background-color: skyblue;
+      }
+    }
+
+    & img {
+      width: 32px !important;
+      height: 32px !important;
     }
   }
 }
