--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -141,14 +141,21 @@
     margin-bottom: 30px;
 
     & .icon {
+      position: relative;
       margin: 0 2px;
       padding: 16px;
-      border-radius: 50%;
-      transition: background-color 0.3s;
-      // color: $contactIconColor; この about ページで使用するアイコン画像の色がこれ
 
       &:hover {
-        background-color: skyblue;
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 1px;
+          background-color: $accentColor;
+          animation: under-bar-kf .3s ease-out;
+        }
       }
     }
 
@@ -166,5 +173,17 @@
       object-position: center;
       object-fit: cover;
     }
+  }
+}
+
+
+@keyframes under-bar-kf {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(100%);
   }
 }
