--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -31,6 +31,16 @@
 
   &__btns {
     text-align: center;
+
+    & .form__btn {
+      font-size: 1em;
+      padding: 0.4em 0.8em;
+      display: block;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 
   &__or__register {
@@ -55,5 +65,20 @@
       height: 1px;
       background-color: $loginOrRegisterLineColor;
     }
+  }
+}
+
+.form {
+  &__title {
+    text-align: center;
+    font-size: 22px;
+    color: $subColor;
+  }
+  &__label {
+    color: $subTitleColor;
+  }
+  &__btn {
+    background-color: $formBtnColor !important;
+    color: white !important;
   }
 }
