--- a/src/scss/pages/mypage.scss
+++ b/src/scss/pages/mypage.scss
@@ -46,10 +46,12 @@
     & .usericon {
       width: 80px;
       height: 80px;
-      margin: 0 auto;
+      margin: 0 auto 4px;
+      padding: 8px;
+      border-radius: 50%;
+      background-color: white;
 
       & img {
-        border-radius: 50%;
         max-width: 100%;
         object-position: center;
         object-fit: cover;
@@ -57,6 +59,7 @@
     }
     & .username {
       text-align: center;
+      font-size: 20px;
     }
   }
 }
