--- a/src/scss/settings/_utils.scss
+++ b/src/scss/settings/_utils.scss
@@ -36,7 +36,7 @@
 @media (min-width: 375px) {
 }
 
-@media (min-width: 560px) {
+@media (min-width: 576px) {
   .font-xs {
     font-size: 0.8em;
   }
@@ -53,9 +53,15 @@
     font-size: 1.4rem;
   }
 }
-@media (min-width: 560px) and (orientation: landscape) {
+@media (min-width: 576px) and (orientation: landscape) {
 }
-@media (min-width: 960px) {
+
+@media (min-width: 768px) {
+}
+@media (min-width: 768px) and (orientation: landscape) {
+}
+
+@media (min-width: 992px) {
   .font-xs {
     font-size: 1.2em;
   }
@@ -73,7 +79,7 @@
   }
 }
 
-@media (min-width: 960px) and (orientation: landscape) {
+@media (min-width: 992px) and (orientation: landscape) {
 }
 
 @media (min-width: 1200px) {
