--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -154,7 +154,7 @@
           width: 100%;
           height: 1px;
           background-color: $accentColor;
-          animation: under-bar-kf .3s ease-out;
+          animation: under-bar-kf 0.3s ease-out;
         }
       }
     }
@@ -176,7 +176,6 @@
   }
 }
 
-
 @keyframes under-bar-kf {
   from {
     opacity: 0;
@@ -185,5 +184,54 @@
   to {
     opacity: 1;
     transform: scale(100%);
+  }
+}
+
+@media (min-width: 375px) {
+  .contact {
+    &__logo {
+      & img {
+        width: 36%;
+      }
+    }
+  }
+}
+
+@media (min-width: 576px) {
+  .contact {
+    &__logo {
+      & img {
+        width: 24%;
+      }
+    }
+  }
+}
+@media (min-width: 576px) and (orientation: landscape) {
+}
+@media (min-width: 768px) {
+  .contact {
+    &__logo {
+      & img {
+        width: 16%;
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) and (orientation: landscape) {
+}
+@media (min-width: 992px) {
+}
+
+@media (min-width: 992px) and (orientation: landscape) {
+}
+
+@media (min-width: 1200px) {
+  .contact {
+    &__logo {
+      & img {
+        width: 12%;
+      }
+    }
   }
 }
